--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
       <li>to do</li>
       <li>to do</li>
     </ol>
+    
+    <div class="image-container"><img src="https://images.unsplash.com/photo-1516934024742-b461fba47600?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="a photo of a fox looking at you" width="200px"></div>
+  </main>
+  <footer>
     <a href="/index.html">go to home page</a><br>
     <a href="https://www.youtube.com/">go to youtube</a><br>
     <a href="http://www.youtube.com/" target="_blank" rel="noopener noreferrer">go to youtube in a new tab</a><br><br>
-    <div class="image-container"><img src="https://images.unsplash.com/photo-1516934024742-b461fba47600?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="a photo of a fox looking at you" width="200px"></div>
-  </main>
-  <footer></footer>
+  </footer>
 </body>
 </html>
